--- a/facebookclone.html
+++ b/facebookclone.html
@@ -22,8 +22,8 @@
             <input class="w-96 h-14 border border-black rounded-md hover:border-blue-500 mt-3" type="password"
                 placeholder=" Password">
             <button
-                class="bt w-96 bg-blue-600 text-xl font-bold text-white mt-2 rounded-lg h-14  hover:bg-blue-700 ">Log
-                In</button>
+                class="bt w-96 bg-blue-600 text-xl font-bold text-white mt-2 rounded-lg h-14  hover:bg-blue-700 "><a href ="https://www.facebook.com/help">Log
+                In</a></button>
             <span class="mt-3 mx-32 text-blue-600 hover:cursor-pointer hover:underline">Forgotten Password?</span>
             <hr class="mt-6 text-bold">
             <button
